Fix header layout on mobile mode

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -14,7 +14,6 @@
             }
             .menu {
                 margin-top: 0;
-                margin-bottom: 0;
             }
         }
     }
@@ -23,6 +22,9 @@
         nav {
             .social {
                 margin-top: 0;
+            }
+            .menu {
+                margin-bottom: 0;
             }
         }
     }
